<resources>
    <string name="app_name">头彩</string>
    <string name="money">¥</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="permission_deny">您已拒绝授权%s读取手机状态和SD卡信息，请进入设置进行授权</string>
    <string name="myaccount">我的账号</string>
    <string name="recharge_limit">充值限时：请在15分钟内完成充值</string>
    <string name="recharge_notice">每日23点50分至0点10分之间使用该充值方式，会延迟到账</string>
    <string name="next">下一步</string>
    <string name="add">添加</string>
    <string name="alipay">支付宝</string>
    <string name="consumption">消费</string>
    <string name="aboutUs">关于头彩</string>
    <string name="pay_question">支付遇到问题，重新下单</string>
    <string name="question">若您支付过程中遇到问题且未完成支付，请重新下单</string>
    <string name="question_hard">*若支付困难，请联系24小时客服</string>
    <string name="bank_scan">银行微信扫码</string>
    <string name="bank_net">银付网银</string>
    <string name="bank_scan_qq">银付QQ扫码</string>
    <string name="bank_scan_qq_web">银付QQWAP</string>
    <string name="bank_pay_qq">银付QQ扫码</string>
    <string name="third_tv">第三方</string>
    <string name="pay_tv">支付宝银行</string>
    <string name="recharge_text">充值限时：请在15分钟内完成充值</string>
    <string name="recharge_time">每日23点50分至0点10分之间使用充值方式，会延迟到账</string>
    <string name="recharge_record">充值记录</string>
    <string name="account_setting">账户设置</string>
    <string name="myaccount_change">我的帐变</string>
    <string name="bank_maragment">银行卡管理</string>
    <string name="withdrawals_tixian">提现记录</string>
    <string name="funds_maragment">资金管理</string>
    <string name="person_center">个人中心</string>
    <string name="safe_center">安全中心</string>
    <string name="my_record">我的记录</string>
    <string name="finsh_despoit">完成充值，确认提交</string>
    <string name="order_time">下单时间</string>
    <string name="all_lottery">全部彩种</string>
    <string name="team_run">团队总揽</string>
    <string name="team_report">团队报表</string>
    <string name="betting_shake">摇一摇</string>
    <string name="betting_clean">清空</string>
    <string name="betting_number_format">共%d注</string>
    <string name="setting">设置</string>
    <string name="buy_lottery_plan">购彩计划</string>
    <string name="neal_week">最近7天</string>
    <string name="neal_month">最近一个月</string>
    <string name="betting_money_format">%d元</string>
    <string name="recharge">充值</string>
    <string name="bind_card">绑定银行卡</string>
    <string name="user">用户名</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="price">0.0</string>
    <string name="send_the_prirce">派奖</string>
    <string name="team_member_text">团队成员：1人(代理0人，玩家1人)</string>
    <string name="team_member_online">团队在线：0人</string>
    <string name="team_member_total">团队余额：10000000000元</string>
    <string name="return_dispoint">返点</string>
    <string name="return_send_price">返派奖</string>
    <string name="activity">活动</string>
    <string name="betting_liang">投注量</string>
    <string name="new_add">新增用户</string>
    <string name="betting_bet_number_format">%d注</string>
    <string name="betting_choose_number">请选择正确的号码</string>
    <string name="betting_has_no_period">暂无期数信息</string>
    <string name="betting_period_not_start">当前期数未开始</string>
    <string name="betting_please_input_money">请输入金额</string>
    <string name="betting_please_return_water">请输入返点</string>
    <string name="betting_only_can_choose_three">只能选中三个号码</string>
    <string name="betting_please_input_correct_money">请输入正确的金额</string>
    <string name="betting_setting">注单设定</string>
    <string name="betting_odds_label">赔率：</string>
    <string name="betting_rebate_label">返利：</string>
    <string name="betting_single_money">单注金额</string>
    <string name="betting_amount_label">总额：</string>
    <string name="betting_betnumber">注数：</string>
    <string name="betting_random">机选</string>
    <string name="team_account_change">团队帐变记录</string>
    <string name="betting_setting_tip">若中奖，单注最高中：</string>
    <string name="betting_slips_back_add">返回继续添加</string>
    <string name="betting_slips_radom">机选一注</string>
    <string name="betting_rebate">%.1f</string>
    <string name="betting_odds">%.2f</string>
    <string name="betting_no_data">无彩种信息</string>
    <string name="betting_recent_lottery">近期开奖</string>
    <string name="betting_recent_lottering">正在开奖</string>
    <string name="betting_period_end">距%s期截止</string>
    <string name="betting_rule_tip">玩法提示</string>
    <string name="betting_rule_explain">中奖说明</string>
    <string name="betting_rule_example">范例</string>
    <string name="betting_menu_trend_chart">走势图</string>
    <string name="betting_menu_recent_lottery">近期开奖</string>
    <string name="betting_menu_lottery_record">购彩记录</string>
    <string name="betting_menu_play_rule_explain">玩法说明</string>
    <string name="betting">投注</string>
    <string name="betting_slips_name_format1">(%s)共</string>
    <string name="betting_slips_name_format2">注，共</string>
    <string name="betting_slips_period_end">第%s期投注截止时间：</string>
    <string name="betting_slips_balance_format">可用余额</string>
    <string name="betting_slips_bet_type">下注类型</string>
    <string name="betting_slips_bet_number">号码</string>
    <string name="betting_slips_bet_odds">赔率</string>
    <string name="betting_success">下注成功</string>
    <string name="bettin_choose_number_first">请先选择号码</string>
    <string name="betting_play_rule">玩法</string>
    <string name="betting_back_tip">是否放弃所选的号码？</string>
    <string name="betting_slips_clean_tip">是否要全部删除？</string>
    <string name="betting_period_change_toast">期次已变化，当前是(%s)期</string>
    <string name="betting_position">位置</string>
    <string name="charge_balance_label">余额：</string>
    <string name="charge_charge_money_amount_label">充值金额：</string>
    <string name="charge_input_money_hint">请输入充值金额</string>
    <string name="charge_choose_pay_way">选择支付方式</string>
    <string name="charge_tencent_qrcode">微信扫码支付（需要等待10秒+才显示）</string>
    <string name="charge_tencent_qrcode_tip">单笔支付1元-3000元</string>
    <string name="charge_tencent_quickpay">QQ钱包快捷支付</string>
    <string name="charge_tencent_pay">QQ钱包（需要等待10秒+才显示）</string>
    <string name="charge_tencent_pay_tip">支持QQ钱包扫码10&#8211;3000</string>
    <string name="charge_ali_quick_pay">支付宝快捷支付</string>
    <string name="charge_ali_quick_pay_tip">支付宝快捷支付1&#8211;3000</string>
    <string name="charge_ali_qrcode">支付宝扫码支付（需要等待10秒+才显示）</string>
    <string name="charge_ali_qrcode_tip">单笔支付1元-3000元</string>
    <string name="charge_union_bank">银行转账【推荐】</string>
    <string name="charge_union_bank_tip">存款100元以上赠送0.6%返利更快捷，0~3分钟到账</string>
    <string name="charge_union_online">网银在线支付</string>
    <string name="charge_union_online_tip">存款立即到账</string>
    <string name="charge_status_success">充值成功</string>
    <string name="charge_status_auditing">等待审核</string>
    <string name="charge_status_failed">审核失败</string>
    <string name="charge_explain">充值说明</string>
    <string name="charge_scan_pay_immediately">立即扫码支付</string>
    <string name="charge_scan_step_label">扫码步骤：</string>
    <string name="charge_scan_step_tips">1.点"立即扫码支付"将自动为您截屏并保存到相册，同时打开支付宝。\n2.请在微信中打开"扫一扫"。\n3.在扫一扫中点击右上角，选择"从相册选取二维码"选取截屏的图片。4.\n输入您欲充值的金额并进行转账，如未及时到账，请联系在线客服。</string>
    <string name="cash_audit_detail">稽核详情</string>
    <string name="cash_limit_tip">最多可提现%s</string>
    <string name="cash_item_content">提现&#160;%.2f元</string>
    <string name="cash_detail_no">提现单号</string>
    <string name="cash_detail_time">提现时间</string>
    <string name="cash_detail_status">提现状态</string>
    <string name="cash_detail_money">提现金额</string>
    <string name="cash_status_processing">处理中</string>
    <string name="cash_status_success">提现成功</string>
    <string name="cash_status_audit_failed">审核未通过</string>
    <string name="cannot_get_user_bank_info">无法获取用户银行卡信息</string>
    <string name="dialog_loading">努力加载中......</string>
    <string name="date">日期</string>
    <string name="doesnot_set">未设置</string>
    <string name="explain">说明</string>
    <string name="forget_password">忘记密码?</string>
    <string name="fund_password_safe_tip">为了您账户安全，真实姓名需要与绑定银行卡姓名一致</string>
    <string name="fund_password">资金密码</string>
    <string name="fund_password_hint">请输入6位数字的密码</string>
    <string name="fund_password_set_tip">陛下\n您没有设置资金密码</string>
    <string name="fund_password_set_quick">请第一时间设置资金密码</string>
    <string name="fund_password_set">去设置</string>
    <string name="fund_password_pass">知道了</string>
    <string name="fund_password_set_success">资金密码设置成功</string>
    <string name="fund_password_modify_success">资金密码修改成功</string>
    <string name="free_trial_register">免费试玩</string>
    <string name="free_trial_set_password_tip">请设置您的试玩密码</string>
    <string name="free_trial_account_name_label">测试账号</string>
    <string name="free_trial_password_hint">6&#8211;12个字符字母及数字</string>
    <string name="free_trial_start_to_play">开始试玩</string>
    <string name="free_trial_remarks">备注</string>
    <string name="free_trial_remarks_content">1.每个试玩账号初始金额为2000RMB，不允许充值。\n2.每个IP每天仅允许有3个试玩账号。\n3.每个试玩账号从注册开始，有效时间为72小时，超过时间系统自动 收回。\n4.试玩账号仅供玩具熟悉游戏，不允许充值提款。\n5.试玩账号不享有参加优惠活动的权利。\n6.试玩账号的赔率仅供参考，可能与正式账号赔率不相符。</string>
    <string name="free_trial_login_tip">你当前使用正式账号，确定进入试玩？</string>
    <string name="hello">hello,您好</string>
    <string name="home_menu_charge">存款充值</string>
    <string name="home_menu_free_trial">免费试玩</string>
    <string name="home_menu_discount_activity">优惠活动</string>
    <string name="home_menu_online_service">在线客服</string>
    <string name="has_set">已设置</string>
    <string name="id_number">身份证号</string>
    <string name="id_number_hint">请输入身份证号</string>
    <string name="intelligent_tracking_number">追号</string>
    <string name="intelligent_tracking_period">期数</string>
    <string name="intelligent_tracking_start">起始</string>
    <string name="intelligent_tracking_multiple">倍数</string>
    <string name="intelligent_tracking_amount">金额</string>
    <string name="intelligent_tracking_begin_time">预计开奖时间</string>
    <string name="intelligent_stop_track_when_win">中奖后停止追号</string>
    <string name="intelligent_every">每隔</string>
    <string name="intelligent_tracking_every_period">期&#160;&#160;&#160;&#160;</string>
    <string name="intelligent_tracking_period_multiply">倍数*</string>
    <string name="intelligent_period_end">第%s期投注截止时间：</string>
    <string name="login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_input_name">请输入用户名</string>
    <string name="login_input_password">请输入密码</string>
    <string name="open_account_area">开户区间：10-12</string>
    <string name="login_fast_register">快速注册|免费试玩</string>
    <string name="login_to_see_order">登录后才能看到注单</string>
    <string name="login_password_donot_match">两个新密码输入不一致，请重新输入</string>
    <string name="login_password_modify_success">登录密码修改成功</string>
    <string name="logout_dialog_title">是否退出登录</string>
    <string name="logout">退出</string>
    <string name="logout_success">退出成功</string>
    <string name="login_forget_password">请联系在线客服找回密码</string>
    <string name="lottery_number_trend">号码走势</string>
    <string name="lottery_start_immediately">立即开奖</string>
    <string name="lottery_go_bet">去购彩</string>
    <string name="limit_description">限额说明</string>
    <string name="limit_description_tip1">确认提款时提交的银行信息的正确性\n必须保证银行卡用户名与注册时提交的用户真实姓名一致</string>
    <string name="my_bank_card_owner">持卡人：</string>
    <string name="open_type">开户类别：</string>
    <string name="link_issnue">链接有效日期：</string>
    <string name="one_day">一天</string>
    <string name="seven_day">七天</string>
    <string name="thiry_day">30天</string>
    <string name="yongjiu_youxiao">永久</string>
    <string name="toady">今天</string>
    <string name="withdrawals">取款</string>
    <string name="lottery_rebates">彩票返点：</string>
    <string name="paly">玩家</string>
    <string name="toup_amount">充值金额</string>
    <string name="btn_next">下一步</string>
    <string name="agency">代理</string>
    <string name="to_up_time">取款时间：15分钟完成充值，单笔限额：0-5000元，免手续费</string>
    <string name="build_link">生成链接</string>
</resources>