<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryInverse"
     android:orientation="vertical"
    >

    <EditText
        android:id="@+id/etToupAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:password="true"
        android:padding="10dp"
        android:hint="@string/toup_amount"
        android:numeric="integer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:background="@color/white"
        android:textSize="@dimen/text_normal"
        android:singleLine="true"
        />


    <Button
        android:id="@+id/btNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/sh_exit_login"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:text="@string/btn_next"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/myaccount_title"
        />
    <TextView
        android:id="@+id/toup_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_up_time"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:padding="5dp"

        android:textSize="@dimen/text_normal"

         />
</LinearLayout>
